# AUTO-HID

./: .gitignore  LICENSE  README.md  ROADMAP.md  prog.py  prog_analysis.md  pyproject.toml
docs/: ARCHITECTURE.md  USAGE.md
src/autokey/: __init__.py  _legacy_prog.py  config.py  sender.py  ui.py  utils.py
