[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autokey-sender"
version = "0.2.0"
description = "Local keystroke automation app with safety and profile support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sami", email = "you@example.com"}]
dependencies = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0"
]

[project.scripts]
autokey = "autokey.ui:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0"
]
exe-build = [
    "pyinstaller>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autokey = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
